# UAV_TrajectoryOpt

./: CMakeLists.txt  README.md
Data/: plane1.yaml
examples/: example1.cpp  example2_generate_polars.cpp  example3_sim.cpp
include/: FixedWing.hpp  SimulationResult.hpp  Simulator.hpp  State.old  integration_methods.hpp  models.hpp  rigit_body_eom.hpp  solvers.hpp  utils.hpp
src/: models.cpp  solvers.cpp
